addd: responsividade tela obras-model.html

--- a/public/views/contato-eletroge.html
+++ b/public/views/contato-eletroge.html
@@ -29,7 +29,7 @@
       <!--container do formulário-->~
       <div class="div-form-container">
         <h2>ENTRE EM CONTATO CONOSCO!</h2>
-        <hr>
+        <hr />
         <!--criação do formulario-->
         <form action="" method="post">
           <!--Input do nome do cliente-->
@@ -81,6 +81,13 @@
         </form>
       </div>
     </main>
+    <div class="nav-mobile">
+      <nav>
+        <a href="servicos-eletroge.html"><i class="fas fa-tools"></i></a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <a href="#"><i class="fas fa-envelope"></i></a>
+      </nav>
+    </div>
 
     <!--Rodapé-->
     <footer>
