--- a/public/views/obras-model.html
+++ b/public/views/obras-model.html
@@ -1,84 +1,350 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EletroGe</title>
-  <link rel="stylesheet" href="../style.css" />
-  <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EletroGe</title>
+    <link rel="stylesheet" href="../style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
       <a href="index.html">
         <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
       </a>
       <nav>
         <a href="index.html"><i class="fas fa-home"></i> Início</a>
-        <a href="servicos-eletroge.html"><i class="fas fa-tools"></i> Serviços</a>
+        <a href="servicos-eletroge.html"
+          ><i class="fas fa-tools"></i> Serviços</a
+        >
         <a href="#"><i class="fas fa-envelope"></i> Contato</a>
       </nav>
     </header>
     <section class="quadros-wrapper">
-      <h1>Conheça as Nossas Principais Obras</h1>
-      <hr class="stardart-line" width="60%">
+      <h2>Conheça as Nossas Principais Obras</h2>
+      <hr class="stardart-line" width="60%" />
       <!-- Radio Button para filtro de obras concluidas ou não-->
       <!--Implementar filtro no back-end  -->
       <div class="filtro-quadros">
         <div>
           <label>
-            <input type="radio" name="filtro-obra" checked=""/>
+            <input type="radio" name="filtro-obra" checked="" />
             <span class="radio-label">Geral</span>
           </label>
           <label>
-            <input type="radio" name="filtro-obra" />
-            <span class="radio-label">Em andamento</span>
-          </label>
-          <label>
-            <input type="radio" name="filtro-obra" />
-            <span class="radio-label">Finalizadas</span>
-          </label>
+              <input type="radio" name="filtro-obra" />
+              <span class="radio-label">Em andamento</span>
+            </label>
+            <label>
+              <input type="radio" name="filtro-obra" />
+              <span class="radio-label">Finalizadas</span>
+            </label>
+          </div>
         </div>
+        <div class="quadros-obras">
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="grade-quadros">
+          <div class="card-obras">
+            <a href="#">
+              <div
+              class="imagem-bg-obra"
+              style="background-image: url('../img/instalcao-spda.jpeg')"
+              ></div>
+            </a>
+            <div class="info-quadros">
+              <a href="#">
+                <span class="titulo-quadro-obra">Teste nome da obra </span>
+              </a>
+              
+              <p class="desc-quadro-obra">Teste da descrição da obra</p>
+              <a class="action" href="#">
+                <p class="p-veja-mais">Veja mais</p>
+                <span aria-hidden="true"> → </span>
+              </a>
+            </div>
+          </div>
+        </div>
+
       </div>
-      
-      <div class="grade-quadros">
-    <div class="card-obras">
-      <div class="imagem-bg-obra" style="background-image: url('../img/instalcao-spda.jpeg')"></div>
-      <div class="info-quadros">
-        <a href="#">
-          <span class="titulo-quadro-obra">Teste nome da obra </span>
-        </a>
-        
-        <p class="desc-quadro-obra">Teste da descrição da obra</p>
-        
-        <a class="action" href="#">
-          Veja mais
-          <span aria-hidden="true"> → </span>
-        </a>
+      </section>
+      <!-- Rodapé -->
+      <div class="nav-mobile">
+        <nav>
+          <a href="servicos-eletroge.html"><i class="fas fa-tools"></i></a>
+          <a href="index.html"><i class="fas fa-home"></i></a>
+          <a href="#"><i class="fas fa-envelope"></i></a>
+        </nav>
       </div>
-    </div>
-  </div>
-</section>
-<!-- Rodapé -->
-<footer>
-  <div class="footer-section footer-yellow-light">
-    <div>Email: contato@eletroge.com</div>
-    <div>WhatsApp: (11) 91234-5678</div>
-    <div>Telefone: (11) 1234-5678</div>
-  </div>
-  <div class="footer-section footer-yellow-dark">
-    <strong>Entre em contato conosco a qualquer momento!</strong>
-  </div>
-  <div class="footer-section footer-white">
-    <img
-            src="../img/logo-eletroge.png"
-            alt="Logo EletroGe"
-            class="img-eletroge-rodape"
-    />
-  </div>
-  
-</footer>
-</body>
+    <footer>
+      <div class="footer-section footer-yellow-light">
+        <div>Email: contato@eletroge.com</div>
+        <div>WhatsApp: (11) 91234-5678</div>
+        <div>Telefone: (11) 1234-5678</div>
+      </div>
+      <div class="footer-section footer-yellow-dark">
+        <strong>Entre em contato conosco a qualquer momento!</strong>
+      </div>
+      <div class="footer-section footer-white">
+        <img
+          src="../img/logo-eletroge.png"
+          alt="Logo EletroGe"
+          class="img-eletroge-rodape"
+        />
+      </div>
+    </footer>
+  </body>
 </html>
