--- a/public/views/saiba-mais.html
+++ b/public/views/saiba-mais.html
@@ -41,8 +41,8 @@
         <div>
           <p class="p-obras-infos">
             <strong>
-              Com mais de 50 obras feitas em todo o Brasil!<br> E com 16 anos de
-              historia
+              Com mais de 50 obras feitas em todo o Brasil!<br />
+              E com 16 anos de historia
             </strong>
           </p>
           <a href="obras-model.html">
@@ -63,11 +63,11 @@
               Texto falando um pouco sobre cada um, com nome e idade
             </p>
           </div>
-          
+
           <div class="detail-img-cos">
             <img src="../img/img-perfil-teste.png" alt="Imagem Oliveira" />
             <h3>Oliveira Aparecido</h3>
-            <p class="p-detail-cos">  
+            <p class="p-detail-cos">
               Texto falando um pouco sobre cada um, com nome e idade
             </p>
           </div>
@@ -75,6 +75,13 @@
       </div>
     </main>
 
+    <div class="nav-mobile">
+      <nav>
+        <a href="servicos-eletroge.html"><i class="fas fa-tools"></i></a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <a href="#"><i class="fas fa-envelope"></i></a>
+      </nav>
+    </div>
     <!--Rodapé-->
     <footer>
       <div class="footer-section footer-yellow-light">
@@ -90,9 +97,8 @@
           src="../img/logo-eletroge.png"
           alt="Logo EletroGe"
           class="img-eletroge-rodape"
-        />  
+        />
       </div>
     </footer>
   </body>
 </html>
-  
