--- a/public/style.css
+++ b/public/style.css
@@ -197,7 +197,7 @@ header {
 }
 
 /* Quadros de serviços */
-.quadros-wrapper h1 {
+.quadros-wrapper h2 {
   text-align: center;
   margin-bottom: 40px;
   font-size: 40px;
@@ -374,19 +374,28 @@ a .botao-andamento {
   background-color: #f5f5f5;
 }
 
-.quadros-wrapper h1 {
+.quadros-wrapper h2 {
   text-align: center;
   margin-bottom: 40px;
   font-size: 40px;
   color: #333;
 }
+.quadros-obras{
+  width:60%;
+  margin: auto;
+  padding: auto;
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  justify-items: center;
 
+}
 .grade-quadros {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 25px;
-  max-width: 1100px;
-  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
 }
 .card-obras {
   width: 300px;
@@ -850,7 +859,7 @@ img {
   background-image: url(../public/img/img-principal.jpg);
   filter: grayscale(30%);
   color: #101010;
-  & > h1 {
+  & > h2 {
     font-size: 40px;
     margin-top: 8rem;
     color: #fff;
@@ -1087,6 +1096,7 @@ img {
     border-top: solid .1rem #000;
     margin: auto;
     justify-content: center;
+    z-index: 9999;  
     & > nav{
       width: 80%;
       display: flex;
@@ -1114,6 +1124,54 @@ img {
       }
     }
   }
+  /* obras-model */
+  /* obras-model */
+.quadros-wrapper {
+  
+  /* Container principal das obras */
+  & > .quadros-obras {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
+    gap: 1rem;
+
+    /* Filtro dentro de quadros-obras */
+    & > .filtro-quadros {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      font-size: .8rem;
+      grid-column: 1 / -1; /* Filtro ocupa toda a largura */
+    }
+
+    /* Cada grupo de quadros */
+    & > .grade-quadros {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      width: 100%; /* ocupa a coluna toda no grid */
+
+      /* Card individual */
+      & > .card-obras {
+        width: 100%;
+
+        & > .info-quadros {
+          & > a > .titulo-quadro-obra {
+            font-size: 1.2rem;
+          }
+          & > p {
+            display: none;
+          }
+          & > .action {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+
 }
 
 
