--- a/public/views/obras.html
+++ b/public/views/obras.html
@@ -1,105 +1,105 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css" />
     <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>Progresso das Obras</title>
-</head>
-<body>
-<!--Cabeçalho-->
-<header>
-  <a href="index.html">
-    <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
-  </a>
-  <nav>
-    <a href="index.html"><i class="fas fa-home"></i> Início</a>
-    <a href="servicos-eletroge.html"><i class="fas fa-tools"></i> Serviços</a>
-    <a href="#"><i class="fas fa-envelope"></i> Contato</a>
-  </nav>
-</header>
+  </head>
+  <body>
+    <!--Cabeçalho-->
+    <header>
+      <a href="index.html">
+        <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+      </a>
+      <nav>
+        <a href="index.html"><i class="fas fa-home"></i> Início</a>
+        <a href="servicos-eletroge.html"
+          ><i class="fas fa-tools"></i> Serviços</a
+        >
+        <a href="#"><i class="fas fa-envelope"></i> Contato</a>
+      </nav>
+    </header>
 
-<main class="main-obras">
-    <section id="section-obras">
-        <h2 id="h2-nome-obra">
-            Nome da Obra
-        </h2>
-        <hr>
+    <main class="main-obras">
+      <section id="section-obras">
+        <h2 id="h2-nome-obra">Nome da Obra</h2>
+        <hr />
         <div id="content-obras">
-            <div id="images-obras">
-                <div id="thumbnail-images-obras">
-                    <img src="../img/coca-cola-img-industrial.jpg" alt="">
-                    <img src="../img/img-principal.jpg" alt="">
-                    <img src="../img/instalacao-alta-tensao.jpg" alt="">
-                    <img src="../img/instalcao-spda.jpeg" alt="">
-                </div>
-                <div id="main-image-obras">
-                    <img src="../img/coca-cola-img-industrial.jpg" alt="">
-                </div>
+          <div id="images-obras">
+            <div id="thumbnail-images-obras">
+              <img src="../img/coca-cola-img-industrial.jpg" alt="" />
+              <img src="../img/img-principal.jpg" alt="" />
+              <img src="../img/instalacao-alta-tensao.jpg" alt="" />
+              <img src="../img/instalcao-spda.jpeg" alt="" />
             </div>
-            <div id="description-obras">
-                
-                <progress value="30" max="100" placeholder="teste">
-                </progress>
-
-                <div id="tag-obras">
-                    
-                    <ul>
-                        <i class="fa-solid fa-bolt"  style="color: #FFD43B;">
-                        </i>
-                        <h4>
-                            SPDA
-                        </h4>
-                    </ul>
-                    <ul>
-                        <i class="fa-solid fa-plug" style="color: #FFD43B;">
-
-                        </i>
-                        <h4>
-                            Alta Tensão
-                        </h4>
-                    </ul>
-                </div>
-                <p id="span-description-obras">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima mollitia nisi incidunt quos commodi dolore repellendus provident, similique autem, obcaecati quidem, magnam consectetur ducimus sunt aperiam eius. Placeat, dolore aliquam?
-                </p>
+            <div id="main-image-obras">
+              <img src="../img/coca-cola-img-industrial.jpg" alt="" />
             </div>
-            
+          </div>
+          <div id="description-obras">
+            <progress value="30" max="100" placeholder="teste"></progress>
+
+            <div id="tag-obras">
+              <ul>
+                <i class="fa-solid fa-bolt" style="color: #ffd43b"> </i>
+                <h4>SPDA</h4>
+              </ul>
+              <ul>
+                <i class="fa-solid fa-plug" style="color: #ffd43b"> </i>
+                <h4>Alta Tensão</h4>
+              </ul>
+            </div>
+            <p id="span-description-obras">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+              mollitia nisi incidunt quos commodi dolore repellendus provident,
+              similique autem, obcaecati quidem, magnam consectetur ducimus sunt
+              aperiam eius. Placeat, dolore aliquam?
+            </p>
+          </div>
         </div>
-    </section>
-</main>
-
-<!--Rodapé-->
-<footer>
-    <div class="footer-section footer-yellow-light">
+      </section>
+    </main>
+    <div class="nav-mobile">
+      <nav>
+        <a href="servicos-eletroge.html"><i class="fas fa-tools"></i></a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <a href="#"><i class="fas fa-envelope"></i></a>
+      </nav>
+    </div>
+    <!--Rodapé-->
+    <footer>
+      <div class="footer-section footer-yellow-light">
         <div>Email: contato@eletroge.com</div>
         <div>WhatsApp: (11) 91234-5678</div>
         <div>Telefone: (11) 1234-5678</div>
-    </div>
-    <div class="footer-section footer-yellow-dark">
+      </div>
+      <div class="footer-section footer-yellow-dark">
         <strong>Entre em contato conosco a qualquer momento!</strong>
-    </div>
-    <div class="footer-section footer-white">
+      </div>
+      <div class="footer-section footer-white">
         <img
-                src="../img/logo-eletroge.png"
-                alt="Logo EletroGe"
-                class="img-eletroge-rodape"
+          src="../img/logo-eletroge.png"
+          alt="Logo EletroGe"
+          class="img-eletroge-rodape"
         />
-    </div>
-</footer>
-<script>
-  const thumbnails = document.querySelectorAll('#thumbnail-images-obras img');
-  const mainImage = document.querySelector('#main-image-obras img');
+      </div>
+    </footer>
+    <script>
+      const thumbnails = document.querySelectorAll(
+        "#thumbnail-images-obras img"
+      );
+      const mainImage = document.querySelector("#main-image-obras img");
 
-  thumbnails.forEach(thumb => {
-    thumb.addEventListener('click', () => {
-      mainImage.src = thumb.src;
-    });
-  });
-</script>
-</body>
+      thumbnails.forEach((thumb) => {
+        thumb.addEventListener("click", () => {
+          mainImage.src = thumb.src;
+        });
+      });
+    </script>
+  </body>
 </html>
