--- a/public/style.css
+++ b/public/style.css
@@ -372,6 +372,7 @@ a .botao-andamento {
 .quadros-wrapper {
   padding: 60px 20px;
   background-color: #f5f5f5;
+  margin: auto;
 }
 
 .quadros-wrapper h2 {
@@ -382,16 +383,13 @@ a .botao-andamento {
 }
 .quadros-obras{
   width:60%;
-  margin: auto;
-  padding: auto;
   margin-top: 2rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
-  justify-items: center;
-
 }
 .grade-quadros {
+  width: 300px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
@@ -1134,7 +1132,6 @@ img {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
     gap: 1rem;
-
     /* Filtro dentro de quadros-obras */
     & > .filtro-quadros {
       width: 100%;
